--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <div id="output"></div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    crossorigin="anonymous"></script>
     <script src="dist/bundle.js"></script>
 </body>
 </html>
